--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc ./src/index.ts"
+    "build": "tsc -w"
   },
   "keywords": [],
   "author": "",
