--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
+    "framer-motion": "^10.12.12",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.0.12",
     "react": "^18.2.0",
@@ -23,15 +25,18 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-input-emoji": "^5.0.2",
     "react-loader-spinner": "^5.3.4",
     "react-phone-number-input": "^3.2.19",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-scrollable-feed": "^1.3.2",
     "react-tagsinput": "^3.20.0",
     "react-toastify": "^9.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.7.3",
     "tailwind-scrollbar-hide": "^1.1.7",
     "timeago.js": "^4.0.0-beta.3"
